--- a/Blogs.Mappers/Blogs.Mappers.csproj
+++ b/Blogs.Mappers/Blogs.Mappers.csproj
@@ -7,17 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Blogs.DTO\Blogs.DTO.csproj" />
     <ProjectReference Include="..\Blogs.Model\Blogs.Model.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.1.66" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.5" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="_db\" />
   </ItemGroup>
 
 </Project>
