--- a/Blogs.Api/Blogs.Api.csproj
+++ b/Blogs.Api/Blogs.Api.csproj
@@ -7,14 +7,27 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.1.66" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.5" />
+    <Content Remove="config.secrets.json" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Blogs.Infra\Blogs.Infra.csproj" />
-    <ProjectReference Include="..\Blogs.Model\Blogs.Model.csproj" />
+    <None Include="config.secrets.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.5" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.12.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Blogs.DTO\Blogs.DTO.csproj" />
+    <ProjectReference Include="..\Blogs.UseCases\Blogs.UseCases.csproj" />
   </ItemGroup>
 
 </Project>
