--- a/Blogs.Infra/Blogs.Infra.csproj
+++ b/Blogs.Infra/Blogs.Infra.csproj
@@ -14,10 +14,17 @@
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.5" />
+    <PackageReference Include="SnowflakeGenerator" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="_db\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="_db\dados.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
